CSS: Fix greedy vertical-align usage

--- a/public/css/lists.less
+++ b/public/css/lists.less
@@ -335,7 +335,6 @@
 
     > * {
       display: inline-block;
-      vertical-align: middle;
 
       &:not(:last-child) {
         margin-right: .5em;
