--- a/public/css/module.less
+++ b/public/css/module.less
@@ -269,6 +269,7 @@
   display: inline-block;
   line-height: .75;
   text-align: center;
+  vertical-align: middle;
 
   .value {
     font-size: 1.5em;
@@ -322,4 +323,9 @@
     margin: 0;
     margin-left: .417em;
   }
+}
+
+// Icinga Web 2 override
+.donut-graph {
+  vertical-align: middle;
 }
